# data-structure

./: .gitignore  CMakeLists.txt  README.md  SqList.c
demo/: LinkList.c  LinkStack.c  MergeList.c  ReverseList.c  SqList.c  SqStack.c  link_list.c  link_stack.c  merge_list.c  reverse_list.c  seq_list.c  sq_list.c  sq_queue.c  sq_stack.c  tempCodeRunnerFile.c
demo/include/: LinkList.h  LinkStack.h  SqList.h  SqStack.h  link_list.h  link_stack.h  seq_list.h  sq_list.h  sq_queue.h  sq_stack.h
demo/queue/: link_queue.c  sq_queue.c
demo/stack/: link_stack.c  sq_stack.c
demo/string/: s_string.c  s_string.h
demo/tree/: binary_search_tree.c  binary_search_tree.h
demo/utils/: print.h
exp/: 1_merge.c  1_merge_list.c  stack.c
questions/: README.md
questions/include/: init_sq_list.h
questions/sq-list/: 2_reverse_sq.c  7_merge_order_list_sq.c  8_reverse_m_n_sq.c  9_find_element_insert_it_sq.c  delete_duplicate_element_sq.c  delete_min_element_sq.c  delete_s2t_element_sq.c  delete_x_element_sq.c  merge_order_list_sq.c  reverse_m_n_sq.c  reverse_sq.c  sq-list.md
real-questions/: README.md
real-questions/ahu/: 1_odd_numbe_found.c  1_odd_number_found.c  2_find_the_perfect_number.c  3_word_length.c
real-questions/bnu/: 1_find_string_from_id.c  2_find_max_min.c  3_minimum_task_completion_time.c
real-questions/cqu/: 1_prime_number.c  2_upper_to_lower.c  3_palindrome_number.c
real-questions/hit/: 1_decrypt.c  2_exchange_card.c  3_infinite_series.c
real-questions/nwu/: 1_is_negative_number.c  2_is_prime_number.c  3_number_of_prime.c  4_is_absolute_prime.c  5_is_super_prime.c  6_processing_strings.c  7_count_the_number_of_vowels.c  8_legal_identifier.c  9_word_statistics.c
real-questions/ustc/: 1_greatest_common_divisor.c  2_train_ticket_booking.c  3_shortest_path_minimum_cost.c
real-questions/xidian/: 1_the_sum_of_numbers.c  2_saddle_point.c  3_huffman_coding.c
real-questions/xmu/: 1_wechat_sends_red_envelope.c  2_quick_sort_pro.c
wangdao-questions/: README.md
wangdao-questions/include/: init_sq_list.h
wangdao-questions/sq-list/: 10_circular_shift_left.c  11_find_the_median_sq.c  12_find_the_main_element_sq.c
wd/include/: init_link_list.h  init_sq_list.h
wd/link-list/: 10_odd_even_separation.c  11_split_link_list.c  12_remove_duplicate_values.c  13_merge_list_decrement.c  14_intersection_two_link.c  1_delete_all_x_link.c  2_delete_all_x_with_head_link.c  3_traverse_list_reverse.c  4_delete_list_min_element.c  5_local_inversion_link.c  6_ascending_sort_link.c  7_delete_between_n_m_list.c  8_find_public_node.c  9_ascending_sort_print.c
wd/sq-list/: 10_circular_shift_left_sq.c  1_delete_min_element_sq.c  3_delete_x_element_sq.c  4_5_delete_s2t_element_sq.c  6_delete_duplicate_element_sq.c
